App menu: fix conmbiend buttons section label start spacing

--- a/theme/parts/popups-contents.css
+++ b/theme/parts/popups-contents.css
@@ -44,6 +44,9 @@ panelview vbox.panel-subview-body > toolbarbutton label, #appMenu-protection-rep
 #appMenu-popup .toolbaritem-combined-buttons {
 	margin-inline-end: 0 !important;
 }
+#appMenu-popup .toolbaritem-combined-buttons .before-label {
+	width: 5px !important;
+}
 #appMenu-fxa-status[fxastatus="signedin"] > #appMenu-fxa-label,
 #appMenu-fxa-container[fxastatus="signedin"] > #appMenu-fxa-status > #appMenu-fxa-label {
 	padding-left: 28px !important;
